new city trainings and stylized city_classification

--- a/validation_shape_bias_3.ipynb
+++ b/validation_shape_bias_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,51 +14,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| model_name                                                                            |\n",
-      "|:--------------------------------------------------------------------------------------|\n",
-      "| CE_animals10_diff_-1+4000_allAug                                                      |\n",
-      "| CE_animals10_diff_-1+8000_allAug                                                      |\n",
-      "| CE_animals10_diff_-1_allAug                                                           |\n",
-      "| CE_animals10_diff_4000_allAug                                                         |\n",
-      "| SupConHybrid_animals10_diff_-1+4000_cAug                                              |\n",
-      "| SupCon_100.0_animals10_diff_-1+4000_cAugSameSAug_fineTuneCAsameSAFactor100            |\n",
-      "| SupCon_100.0_animals10_diff_-1+4000_cAugSameSAug_fineTuneCAsameSAFactor100NoNormalize |\n",
-      "| SupCon_20.0_animals10_diff_-1+4000_cAugSameSAug                                       |\n",
-      "| SupCon_5.0_animals10_diff_-1+4000_cAugSameSAug_factor5cAugSameSAug                    |\n",
-      "| SupCon_5.0_animals10_diff_-1+4000_cAugSameSAug_fineTuneCAsameSAFactor5                |\n",
-      "| SupCon_animals10_diff_-1+4000_cAugSameSAug                                            |\n",
-      "| SupCon_animals10_diff_-1+8000_cAugSameSAug                                            |\n",
-      "| SupCon_animals10_diff_-1_allAug                                                       |\n"
+      "| model_name                                            |\n",
+      "|:------------------------------------------------------|\n",
+      "| SupCon_city_classification_original+diff_cAugSameSAug |\n"
      ]
     }
    ],
    "source": [
     "exclude_params_dict = {\"tag\": [\"CropSize32\", \"divergent\", \"toSlow\", \"lrAdjust1\", \"lrAdjust2\", \"noCosine\", \"bszAdjust1\"]}\n",
-    "keep_params_dict = {\"aug\": [\"colorJitter\", \"grayscale\"]}\n",
+    "# keep_params_dict = {\"dataset\": [\"city_classification_original\", \"city_classification_diff\", \"city_classification_original+diff\"]}\n",
+    "keep_params_dict = {\"dataset\": \"city_classification_original+diff\"}\n",
     "models_dict, df_modelNames = ut_val.collect_models_dict(epoch=\"last\", dataset_classifier=\"\", exclude_params_dict=exclude_params_dict, keep_params_dict=keep_params_dict)\n",
     "print(df_modelNames.to_markdown(index=False))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cuda_device = 1\n",
+    "cuda_device = 2\n",
     "\n",
     "dataset_cue_conflict = \"shape_texture_conflict_animals10_many\"\n",
     "\n",
-    "dataset_orig = \"animals10_diff_-1\"\n",
-    "dataset_shape = \"stylized_animals10\"\n",
-    "dataset_diff = \"animals10_diff_4000\""
+    "dataset_orig = \"city_classification_original\"\n",
+    "dataset_shape = \"stylized_city_classification\"\n",
+    "dataset_diff = \"city_classification_diff\""
    ]
   },
   {
@@ -220,8 +209,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 202/202 [00:56<00:00,  3.59it/s]\n",
-      "100%|██████████| 202/202 [01:01<00:00,  3.29it/s]\n"
+      "100%|██████████| 163/163 [00:44<00:00,  3.70it/s]\n",
+      "100%|██████████| 163/163 [00:48<00:00,  3.33it/s]\n"
      ]
     },
     {
@@ -252,21 +241,21 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>SupCon_100.0_animals10_diff_-1+4000_cAugSameSAug</th>\n",
-       "      <td>137</td>\n",
-       "      <td>123</td>\n",
-       "      <td>252</td>\n",
+       "      <th>SupCon_city_classification_original+diff_cAugSameSAug</th>\n",
+       "      <td>114</td>\n",
+       "      <td>149</td>\n",
+       "      <td>249</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                  shape_dims  texture_dims  \\\n",
-       "SupCon_100.0_animals10_diff_-1+4000_cAugSameSAug         137           123   \n",
+       "                                                    shape_dims  texture_dims  \\\n",
+       "SupCon_city_classification_original+diff_cAugSa...         114           149   \n",
        "\n",
-       "                                                  remaining_dims  \n",
-       "SupCon_100.0_animals10_diff_-1+4000_cAugSameSAug             252  "
+       "                                                    remaining_dims  \n",
+       "SupCon_city_classification_original+diff_cAugSa...             249  "
       ]
      },
      "execution_count": 5,
@@ -303,8 +292,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 202/202 [01:57<00:00,  1.72it/s]\n",
-      "100%|██████████| 202/202 [04:24<00:00,  1.31s/it]\n"
+      "100%|██████████| 163/163 [00:43<00:00,  3.76it/s]\n",
+      "100%|██████████| 163/163 [01:38<00:00,  1.65it/s]\n"
      ]
     },
     {
@@ -336,22 +325,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>SupCon_100.0_animals10_diff_-1+4000_cAugSameSAug</th>\n",
-       "      <td>116</td>\n",
-       "      <td>100</td>\n",
-       "      <td>82</td>\n",
-       "      <td>214</td>\n",
+       "      <th>SupCon_city_classification_original+diff_cAugSameSAug</th>\n",
+       "      <td>96</td>\n",
+       "      <td>124</td>\n",
+       "      <td>80</td>\n",
+       "      <td>212</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                  shape_dims  texture_dims  \\\n",
-       "SupCon_100.0_animals10_diff_-1+4000_cAugSameSAug         116           100   \n",
+       "                                                    shape_dims  texture_dims  \\\n",
+       "SupCon_city_classification_original+diff_cAugSa...          96           124   \n",
        "\n",
-       "                                                  color_dims  remaining_dims  \n",
-       "SupCon_100.0_animals10_diff_-1+4000_cAugSameSAug          82             214  "
+       "                                                    color_dims  remaining_dims  \n",
+       "SupCon_city_classification_original+diff_cAugSa...          80             212  "
       ]
      },
      "execution_count": 6,
@@ -462,15 +451,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 202/202 [02:11<00:00,  1.54it/s]\n",
-      "100%|██████████| 202/202 [02:10<00:00,  1.54it/s]\n"
+      "100%|██████████| 163/163 [00:49<00:00,  3.32it/s]\n",
+      "100%|██████████| 163/163 [00:49<00:00,  3.31it/s]\n"
      ]
     },
     {
@@ -501,9 +490,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>SupCon_100.0_animals10_diff_-1+4000_cAugSameSAug</th>\n",
-       "      <td>193</td>\n",
-       "      <td>104</td>\n",
+       "      <th>SupCon_city_classification_original+diff_cAugSameSAug</th>\n",
+       "      <td>169</td>\n",
+       "      <td>128</td>\n",
        "      <td>215</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -511,14 +500,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                  shape_dims  texture_dims  \\\n",
-       "SupCon_100.0_animals10_diff_-1+4000_cAugSameSAug         193           104   \n",
+       "                                                    shape_dims  texture_dims  \\\n",
+       "SupCon_city_classification_original+diff_cAugSa...         169           128   \n",
        "\n",
-       "                                                  remaining_dims  \n",
-       "SupCon_100.0_animals10_diff_-1+4000_cAugSameSAug             215  "
+       "                                                    remaining_dims  \n",
+       "SupCon_city_classification_original+diff_cAugSa...             215  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,15 +527,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 202/202 [02:13<00:00,  1.52it/s]\n",
-      "100%|██████████| 202/202 [04:23<00:00,  1.30s/it]\n"
+      "100%|██████████| 163/163 [00:49<00:00,  3.31it/s]\n",
+      "100%|██████████| 163/163 [01:38<00:00,  1.66it/s]\n"
      ]
     },
     {
@@ -578,25 +567,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>SupCon_100.0_animals10_diff_-1+4000_cAugSameSAug</th>\n",
-       "      <td>167</td>\n",
-       "      <td>87</td>\n",
+       "      <th>SupCon_city_classification_original+diff_cAugSameSAug</th>\n",
+       "      <td>146</td>\n",
+       "      <td>109</td>\n",
        "      <td>71</td>\n",
-       "      <td>187</td>\n",
+       "      <td>186</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                  shape_dims  texture_dims  \\\n",
-       "SupCon_100.0_animals10_diff_-1+4000_cAugSameSAug         167            87   \n",
+       "                                                    shape_dims  texture_dims  \\\n",
+       "SupCon_city_classification_original+diff_cAugSa...         146           109   \n",
        "\n",
-       "                                                  color_dims  remaining_dims  \n",
-       "SupCon_100.0_animals10_diff_-1+4000_cAugSameSAug          71             187  "
+       "                                                    color_dims  remaining_dims  \n",
+       "SupCon_city_classification_original+diff_cAugSa...          71             186  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,17 +785,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:15<00:00,  1.57s/it]\n",
-      "100%|██████████| 10/10 [00:15<00:00,  1.58s/it]\n",
-      "100%|██████████| 5236/5236 [02:05<00:00, 41.77it/s]\n",
-      "100%|██████████| 5236/5236 [01:36<00:00, 54.03it/s]\n"
+      "100%|██████████| 11/11 [00:09<00:00,  1.18it/s]\n",
+      "100%|██████████| 11/11 [00:09<00:00,  1.20it/s]\n",
+      "100%|██████████| 4218/4218 [01:00<00:00, 70.07it/s]\n",
+      "100%|██████████| 4218/4218 [00:56<00:00, 75.14it/s]\n"
      ]
     },
     {
@@ -830,59 +819,59 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>SupCon_100.0_animals10_diff_-1+4000_cAugSameSAug</th>\n",
+       "      <th>SupCon_city_classification_original+diff_cAugSameSAug</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>mean_distance_related</th>\n",
-       "      <td>0.000430</td>\n",
+       "      <td>0.109374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std_distance_related</th>\n",
-       "      <td>0.000816</td>\n",
+       "      <td>0.111036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean_distance_classes</th>\n",
-       "      <td>0.252440</td>\n",
+       "      <td>0.282253</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std_distance_classes</th>\n",
-       "      <td>0.155461</td>\n",
+       "      <td>0.129348</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean_distance_all_vs_all</th>\n",
-       "      <td>0.252750</td>\n",
+       "      <td>0.363678</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std_distance_all_vs_all</th>\n",
-       "      <td>0.150203</td>\n",
+       "      <td>0.124352</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min_distance</th>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>0.002083</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max_distance</th>\n",
-       "      <td>0.854468</td>\n",
+       "      <td>0.968120</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          SupCon_100.0_animals10_diff_-1+4000_cAugSameSAug\n",
-       "mean_distance_related                                             0.000430\n",
-       "std_distance_related                                              0.000816\n",
-       "mean_distance_classes                                             0.252440\n",
-       "std_distance_classes                                              0.155461\n",
-       "mean_distance_all_vs_all                                          0.252750\n",
-       "std_distance_all_vs_all                                           0.150203\n",
-       "min_distance                                                      0.000002\n",
-       "max_distance                                                      0.854468"
+       "                          SupCon_city_classification_original+diff_cAugSameSAug\n",
+       "mean_distance_related                                              0.109374    \n",
+       "std_distance_related                                               0.111036    \n",
+       "mean_distance_classes                                              0.282253    \n",
+       "std_distance_classes                                               0.129348    \n",
+       "mean_distance_all_vs_all                                           0.363678    \n",
+       "std_distance_all_vs_all                                            0.124352    \n",
+       "min_distance                                                       0.002083    \n",
+       "max_distance                                                       0.968120    "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
