--- a/adaIN_styletransfer.ipynb
+++ b/adaIN_styletransfer.ipynb
@@ -33,15 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cuda_device = 0\n",
+    "cuda_device = 1\n",
     "\n",
-    "dataset = \"animals10_diff_-1\"\n",
+    "dataset = \"city_classification_original\"\n",
     "styles_path = \"./datasets/adaIN/paintings/\"\n",
-    "output_path = \"./datasets/adaIN/stylized_animals10/test/\"\n",
+    "output_path = \"./datasets/adaIN/stylized_city_classification/test/\"\n",
     "\n",
     "\n",
     "tmp_shape = \"./datasets/adaIN/tmp/shape/\"\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,23 +180,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 54/54 [04:28<00:00,  4.98s/it]\n",
-      "100%|██████████| 54/54 [04:21<00:00,  4.83s/it]\n",
-      "100%|██████████| 54/54 [04:12<00:00,  4.68s/it]\n",
-      "100%|██████████| 54/54 [04:18<00:00,  4.78s/it]\n",
-      "100%|██████████| 54/54 [04:27<00:00,  4.95s/it]\n",
-      "100%|██████████| 54/54 [04:14<00:00,  4.71s/it]\n",
-      "100%|██████████| 54/54 [04:10<00:00,  4.64s/it]\n",
-      "100%|██████████| 54/54 [04:07<00:00,  4.58s/it]\n",
-      "100%|██████████| 54/54 [04:36<00:00,  5.12s/it]\n",
-      "100%|██████████| 54/54 [04:11<00:00,  4.66s/it]\n"
+      "100%|██████████| 54/54 [04:56<00:00,  5.49s/it]\n",
+      "100%|██████████| 54/54 [04:26<00:00,  4.94s/it]\n",
+      "100%|██████████| 54/54 [04:25<00:00,  4.92s/it]\n",
+      "100%|██████████| 54/54 [03:37<00:00,  4.03s/it]\n",
+      "100%|██████████| 54/54 [03:10<00:00,  3.52s/it]\n",
+      "100%|██████████| 54/54 [03:16<00:00,  3.64s/it]\n",
+      "100%|██████████| 54/54 [01:46<00:00,  1.97s/it]\n",
+      "100%|██████████| 54/54 [02:23<00:00,  2.66s/it]\n",
+      "100%|██████████| 54/54 [03:18<00:00,  3.67s/it]\n",
+      "100%|██████████| 54/54 [03:05<00:00,  3.44s/it]\n",
+      "100%|██████████| 54/54 [01:45<00:00,  1.96s/it]\n"
      ]
     }
    ],
