stylized animals10 trainings data

--- a/adaIN_styletransfer.ipynb
+++ b/adaIN_styletransfer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,15 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cuda_device = 1\n",
+    "cuda_device = 0\n",
     "\n",
-    "dataset = \"city_classification_original\"\n",
-    "styles_path = \"./datasets/adaIN/paintings/\"\n",
-    "output_path = \"./datasets/adaIN/stylized_city_classification/test/\"\n",
+    "# dataset = \"city_classification_original\"\n",
+    "# styles_path = \"./datasets/adaIN/paintings/\"\n",
+    "# output_path = \"./datasets/adaIN/stylized_city_classification/test/\"\n",
+    "\n",
+    "dataset = \"animals10_diff_-1\"\n",
+    "styles_path = \"./datasets/adaIN/paintings/selected_for_styletransfer/train/\"\n",
+    "output_path = \"./datasets/adaIN/stylized_animals10/train/\"\n",
     "\n",
     "\n",
     "tmp_shape = \"./datasets/adaIN/tmp/shape/\"\n",
@@ -51,11 +55,12 @@
     "addIn_path = \"./../pytorch-AdaIN/\"\n",
     "\n",
     "adaIn_execution_file = os.path.join(addIn_path, \"test.py\")\n",
+    "adaIn_execution_file_many = os.path.join(addIn_path, \"test_many_individual.py\")\n",
     "adaIn_vgg = os.path.join(addIn_path, \"models/vgg_normalised.pth\")\n",
     "adaIn_decoder = os.path.join(addIn_path, \"models/decoder.pth\")\n",
     "\n",
     "classes = ut_val.get_classes(dataset)\n",
-    "_, root_test = ut_val.get_root_dataset(dataset)\n",
+    "root_train, root_test = ut_val.get_root_dataset(dataset)\n",
     "\n",
     "image_loader = datasets.folder.default_loader"
    ]
@@ -101,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +153,139 @@
     "               + f\"--content_size {size} --style_size {size} --crop \"\\\n",
     "               + f\"--output {path_output} --vgg {adaIn_vgg} --decoder {adaIn_decoder}\"\n",
     "    \n",
+    "    os.system(adaIn_call)\n",
+    "\n",
+    "def adaIN_many_individual(path_shape, path_style, path_content_style_csv, path_output, size=300,\n",
+    "           adaIn_execution_file_many=adaIn_execution_file_many, adaIn_vgg=adaIn_vgg,\n",
+    "           adaIn_decoder=adaIn_decoder, cuda_device=cuda_device):\n",
+    "\n",
+    "    os.makedirs(path_output, exist_ok=True)\n",
+    "\n",
+    "    adaIn_call = f\"CUDA_VISIBLE_DEVICES={cuda_device} \"\\\n",
+    "               + f\"{adaIn_venv_interpreter} {adaIn_execution_file_many} \"\\\n",
+    "               + f\"--content_dir {path_shape} \"\\\n",
+    "               + f\"--style_dir {path_style} \"\\\n",
+    "               + f\"--content_style_csv {path_content_style_csv} \"\\\n",
+    "               + f\"--content_size {size} --style_size {size} --crop \"\\\n",
+    "               + f\"--output {path_output} --vgg {adaIn_vgg} --decoder {adaIn_decoder}\"\n",
+    "    \n",
     "    os.system(adaIn_call)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- stylize trainings data with paintings (in a way that for each class no painting is used more frequent than other ones)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:05<00:00,  1.76it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "painting_paths = np.array(glob.glob(os.path.join(styles_path, \"*\")))\n",
+    "painting_labels = np.arange(len(painting_paths))\n",
+    "\n",
+    "df_train = create_files_dataFrame(root_train, classes)\n",
+    "\n",
+    "df_train[\"painting_lable\"] = len(df_train)*[-1]\n",
+    "df_train[\"painting\"] = len(df_train)*[\"\"]\n",
+    "\n",
+    "for l, c in enumerate(tqdm(classes)):\n",
+    "    index_class = np.array(df_train[df_train.label == l].index)\n",
+    "    index_class = index_class[np.random.permutation(len(index_class))]\n",
+    "\n",
+    "    if len(index_class) > len(painting_paths):\n",
+    "        index_split = np.array_split(index_class, len(painting_paths))\n",
+    "        painting_labels_select = painting_labels\n",
+    "    else:\n",
+    "        index_split = np.array_split(index_class, len(index_class))\n",
+    "        painting_labels_select = painting_labels[np.random.permutation(len(painting_labels))][:len(index_class)]\n",
+    "\n",
+    "    for i, pl in enumerate(painting_labels_select):\n",
+    "        df_train.loc[index_split[i],\"painting_lable\"] = pl\n",
+    "        df_train.loc[index_split[i],\"painting\"] = os.path.split(painting_paths[pl])[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [12:04<00:00, 72.46s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "path_content_style_csv = \"./datasets/adaIN/tmp/content_style_pair.csv\"\n",
+    "\n",
+    "for l, c in enumerate(tqdm(classes)):\n",
+    "    path_content = os.path.join(root_train, c)\n",
+    "    out_path = os.path.join(output_path, c)\n",
+    "\n",
+    "    df_train.query(f\"label == {l}\").sort_values(\"painting_lable\").reset_index(drop=True)[[\"image\", \"painting\"]].to_csv(\n",
+    "        path_content_style_csv, index=False, header=False)\n",
+    "    \n",
+    "    adaIN_many_individual(path_shape=path_content, path_style=styles_path, path_content_style_csv=path_content_style_csv,\n",
+    "                          path_output=out_path, cuda_device=cuda_device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- resize the output to $300\\times300$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/5236 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5236/5236 [00:12<00:00, 419.88it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "resized_dataset = datasets.ImageFolder(root=output_path, transform=transforms.Resize(300))\n",
+    "\n",
+    "for i in tqdm(range(len(resized_dataset))):\n",
+    "    img = resized_dataset[i][0]\n",
+    "    img_path = resized_dataset.imgs[i][0]\n",
+    "\n",
+    "    img.save(img_path)"
    ]
   },
   {
