--- a/resizing_animals10.ipynb
+++ b/resizing_animals10.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,12 +329,14 @@
     "# root_new = \"./datasets/animals10_diff/8000/train/\"\n",
     "\n",
     "# root_new = \"./datasets/city_classification/Original/train/\"\n",
-    "root_new = \"./datasets/city_classification/EEDv2_5792_as_Original5/train/\""
+    "# root_new = \"./datasets/city_classification/EEDv2_5792_as_Original5/train/\"\n",
+    "\n",
+    "root_new = \"./datasets/adaIN/stylized_animals10/train/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,21 +351,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 864/864 [00:22<00:00, 38.04it/s]\n"
+      "  0%|          | 0/1309 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1309/1309 [00:14<00:00, 93.37it/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean: tensor([0.1471, 0.1704, 0.1445]), std: tensor([0.1896, 0.2021, 0.1862])\n"
+      "mean: tensor([0.5643, 0.5126, 0.4516]), std: tensor([0.2696, 0.2618, 0.2596])\n"
      ]
     }
    ],
@@ -389,6 +398,8 @@
     "- animals10_diff_-1: `mean: tensor([0.3816, 0.3683, 0.3052]), std: tensor([0.3281, 0.3198, 0.3055])`\n",
     "- animals10_diff_4000: `mean: tensor([0.3869, 0.3732, 0.3088]), std: tensor([0.3273, 0.3186, 0.3039])`\n",
     "- animals10_diff_8000 `mean: tensor([0.3912, 0.3774, 0.3121]), std: tensor([0.3290, 0.3202, 0.3050])`\n",
+    "\n",
+    "- stylized_animals10 `mean: tensor([0.5643, 0.5126, 0.4516]), std: tensor([0.2696, 0.2618, 0.2596])`\n",
     "\n",
     "- animals10_diff_-1_small: `mean: tensor([0.3708, 0.3579, 0.2948]), std: tensor([0.3253, 0.3171, 0.3019])`\n",
     "- animals10_diff_4000_small: `mean: tensor([0.3749, 0.3618, 0.2974]), std: tensor([0.3233, 0.3148, 0.2992])`\n",
