rename adaIN stylized datasets to reflect that they are 304x304

--- a/adaIN_styletransfer.ipynb
+++ b/adaIN_styletransfer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,19 +33,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "cuda_device = 0\n",
     "\n",
     "# dataset = \"city_classification_original\"\n",
-    "# styles_path = \"./datasets/adaIN/paintings/\"\n",
+    "# styles_path = \"./datasets/adaIN/paintings/selected_for_styletransfer/test/\"\n",
     "# output_path = \"./datasets/adaIN/stylized_city_classification/test/\"\n",
     "\n",
     "dataset = \"animals10_diff_-1\"\n",
-    "styles_path = \"./datasets/adaIN/paintings/selected_for_styletransfer/train/\"\n",
-    "output_path = \"./datasets/adaIN/stylized_animals10/train/\"\n",
+    "styles_path = \"./datasets/adaIN/textures_animals10_many/\"\n",
+    "output_path = \"./datasets/adaIN/shape_texture_conflict_animals10_many/\"\n",
+    "\n",
+    "# dataset = \"animals10_diff_-1\"\n",
+    "# styles_path = \"./datasets/adaIN/paintings/selected_for_styletransfer/train/\"\n",
+    "# output_path = \"./datasets/adaIN/stylized_animals10/train/\"\n",
     "\n",
     "\n",
     "tmp_shape = \"./datasets/adaIN/tmp/shape/\"\n",
@@ -260,21 +264,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/5236 [00:00<?, ?it/s]"
+      "  0%|          | 0/4218 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5236/5236 [00:12<00:00, 419.88it/s]\n"
+      "100%|██████████| 4218/4218 [00:11<00:00, 377.50it/s]\n"
      ]
     }
    ],
@@ -487,6 +491,36 @@
     "\n",
     "            for f in tmp_files:\n",
     "                os.remove(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- resize the output to $300\\times300$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23310/23310 [00:53<00:00, 436.26it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "conflict_dataset = ut_val.shapeTextureConflictDataset(root=output_path, transform=transforms.Resize(300))\n",
+    "\n",
+    "for i in tqdm(range(len(conflict_dataset))):\n",
+    "    img = conflict_dataset[i][0]\n",
+    "    img_path = conflict_dataset.paths[i]\n",
+    "\n",
+    "    img.save(img_path)"
    ]
   },
   {
