adaINtexture dataset+training+validation, latex validation tables

--- a/adaIN_styletransfer.ipynb
+++ b/adaIN_styletransfer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,8 @@
     "\n",
     "dataset = \"animals10_diff_-1\"\n",
     "styles_path = \"./datasets/adaIN/textures_animals10_many/\"\n",
-    "output_path = \"./datasets/adaIN/shape_texture_conflict_animals10_many/\"\n",
+    "styles_path_train = \"./datasets/adaIN/textures_animals10_train/\"\n",
+    "output_path = \"./datasets/adaIN/animals10_diff_adaINtexture/\"\n",
     "\n",
     "# dataset = \"animals10_diff_-1\"\n",
     "# styles_path = \"./datasets/adaIN/paintings/selected_for_styletransfer/train/\"\n",
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +160,7 @@
     "    \n",
     "    os.system(adaIn_call)\n",
     "\n",
-    "def adaIN_many_individual(path_shape, path_style, path_content_style_csv, path_output, size=300,\n",
+    "def adaIN_many_individual(path_shape, path_style, path_content_style_csv, path_output, size=300, save_separator=\"stylized\",\n",
     "           adaIn_execution_file_many=adaIn_execution_file_many, adaIn_vgg=adaIn_vgg,\n",
     "           adaIn_decoder=adaIn_decoder, cuda_device=cuda_device):\n",
     "\n",
@@ -170,10 +171,199 @@
     "               + f\"--content_dir {path_shape} \"\\\n",
     "               + f\"--style_dir {path_style} \"\\\n",
     "               + f\"--content_style_csv {path_content_style_csv} \"\\\n",
+    "               + f\"--save_separator {save_separator} \"\\\n",
     "               + f\"--content_size {size} --style_size {size} --crop \"\\\n",
     "               + f\"--output {path_output} --vgg {adaIn_vgg} --decoder {adaIn_decoder}\"\n",
     "    \n",
     "    os.system(adaIn_call)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- stylize each shape with one random selected texture of an other class (for trainings and test data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/10 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:00<00:00, 20.81it/s]\n",
+      "100%|██████████| 10/10 [00:01<00:00,  5.24it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "style_kinds = np.array(sorted([style_kind.split('/')[-1] for style_kind in glob.glob(os.path.join(styles_path, \"*\"))]))\n",
+    "style_kinds_train = np.array(sorted([style_kind.split('/')[-1] for style_kind in glob.glob(os.path.join(styles_path_train, \"*\"))]))\n",
+    "assert np.all(style_kinds == style_kinds_train)\n",
+    "\n",
+    "style_paths = glob.glob(os.path.join(styles_path, \"*\", \"*\"))\n",
+    "style_paths_train = glob.glob(os.path.join(styles_path_train, \"*\", \"*\"))\n",
+    "\n",
+    "df_test = create_files_dataFrame(root_test, classes)\n",
+    "df_train = create_files_dataFrame(root_train, classes)\n",
+    "\n",
+    "\n",
+    "def select_texture(df_stylize, select_path):\n",
+    "    df_stylize[\"style_label\"] = len(df_stylize)*[-1]\n",
+    "    df_stylize[\"style_image\"] = len(df_stylize)*[\"\"]\n",
+    "\n",
+    "    for l, c in enumerate(tqdm(classes)):\n",
+    "        index_class = np.array(df_stylize[df_stylize.label == l].index)\n",
+    "        index_class = index_class[np.random.permutation(len(index_class))]\n",
+    "        index_split = np.array_split(index_class, len(style_kinds) + (-1 if c in style_kinds else 0))\n",
+    "\n",
+    "        style_labels = np.arange(len(style_kinds))\n",
+    "        style_labels = style_labels[style_kinds != c]\n",
+    "\n",
+    "        for i, s in enumerate(style_kinds[style_kinds != c]):\n",
+    "            df_stylize.loc[index_split[i],\"style_label\"] = style_labels[i]\n",
+    "\n",
+    "            style_examples = [s_e.split('/')[-1] for s_e in glob.glob(os.path.join(select_path, s, \"*\"))]\n",
+    "\n",
+    "            index_examples = np.array_split(index_split[i], len(style_examples))\n",
+    "            for j, s_e in enumerate(style_examples):\n",
+    "                df_stylize.loc[index_examples[j],\"style_image\"] = s_e\n",
+    "\n",
+    "    return df_stylize\n",
+    "\n",
+    "\n",
+    "df_test = select_texture(df_stylize=df_test, select_path=styles_path)\n",
+    "df_train = select_texture(df_stylize=df_train, select_path=styles_path_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stylize_with_textures(root_content, root_style, root_output, df_stylize):\n",
+    "    path_content_style_csv = \"./datasets/adaIN/tmp/content_style_pair.csv\"\n",
+    "\n",
+    "    for l, c in enumerate(tqdm(classes)):\n",
+    "        for i, s in enumerate(style_kinds):\n",
+    "            if l != i:\n",
+    "                path_content = os.path.join(root_content, c)\n",
+    "                path_style = os.path.join(root_style, s)\n",
+    "                out_path = os.path.join(root_output, c)\n",
+    "\n",
+    "                df_stylize.query(f\"label == {l} & style_label == {i}\").reset_index(drop=True)[[\"image\", \"style_image\"]].to_csv(\n",
+    "                    path_content_style_csv, index=False, header=False)\n",
+    "                \n",
+    "                adaIN_many_individual(path_shape=path_content, path_style=path_style, path_content_style_csv=path_content_style_csv,\n",
+    "                                      save_separator=f\"stylized_{s}\", size=300,\n",
+    "                                      path_output=out_path, cuda_device=cuda_device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [06:20<00:00, 38.05s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "stylize_with_textures(root_content=root_test, root_style=styles_path, root_output=os.path.join(output_path, \"test\"),\n",
+    "                      df_stylize=df_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [12:43<00:00, 76.32s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "stylize_with_textures(root_content=root_train, root_style=styles_path_train, root_output=os.path.join(output_path, \"train\"),\n",
+    "                      df_stylize=df_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- resize the output to $300\\times300$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5236/5236 [00:11<00:00, 445.95it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "out_dataset_test = datasets.ImageFolder(root=os.path.join(output_path, \"test\"), transform=transforms.Resize(300))\n",
+    "\n",
+    "for i in tqdm(range(len(out_dataset_test))):\n",
+    "    img = out_dataset_test[i][0]\n",
+    "    img_path = out_dataset_test.imgs[i][0]\n",
+    "\n",
+    "    img.save(img_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20942/20942 [00:47<00:00, 437.22it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "out_dataset_train = datasets.ImageFolder(root=os.path.join(output_path, \"train\"), transform=transforms.Resize(300))\n",
+    "\n",
+    "for i in tqdm(range(len(out_dataset_train))):\n",
+    "    img = out_dataset_train[i][0]\n",
+    "    img_path = out_dataset_train.imgs[i][0]\n",
+    "\n",
+    "    img.save(img_path)"
    ]
   },
   {
