--- a/resizing_animals10.ipynb
+++ b/resizing_animals10.ipynb
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,12 +331,14 @@
     "# root_new = \"./datasets/city_classification/Original/train/\"\n",
     "# root_new = \"./datasets/city_classification/EEDv2_5792_as_Original5/train/\"\n",
     "\n",
-    "root_new = \"./datasets/adaIN/stylized_animals10/train/\""
+    "# root_new = \"./datasets/adaIN/stylized_animals10/train/\"\n",
+    "\n",
+    "root_new = \"./datasets/adaIN/animals10_diff_adaINtexture/train/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -365,14 +367,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1309/1309 [00:14<00:00, 93.37it/s] \n"
+      "100%|██████████| 1309/1309 [00:31<00:00, 41.13it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean: tensor([0.5643, 0.5126, 0.4516]), std: tensor([0.2696, 0.2618, 0.2596])\n"
+      "mean: tensor([0.4974, 0.4187, 0.3538]), std: tensor([0.2496, 0.2375, 0.2322])\n"
      ]
     }
    ],
@@ -400,6 +402,8 @@
     "- animals10_diff_8000 `mean: tensor([0.3912, 0.3774, 0.3121]), std: tensor([0.3290, 0.3202, 0.3050])`\n",
     "\n",
     "- stylized_animals10 `mean: tensor([0.5643, 0.5126, 0.4516]), std: tensor([0.2696, 0.2618, 0.2596])`\n",
+    "\n",
+    "- animals10_diff_adaINtexture `mean: tensor([0.4974, 0.4187, 0.3538]), std: tensor([0.2496, 0.2375, 0.2322])`\n",
     "\n",
     "- animals10_diff_-1_small: `mean: tensor([0.3708, 0.3579, 0.2948]), std: tensor([0.3253, 0.3171, 0.3019])`\n",
     "- animals10_diff_4000_small: `mean: tensor([0.3749, 0.3618, 0.2974]), std: tensor([0.3233, 0.3148, 0.2992])`\n",
